Fix builder clipping by removing hardcoded height and increasing view viewport

--- a/resources/js/components/builder/styles/builder.css
+++ b/resources/js/components/builder/styles/builder.css
@@ -205,7 +205,7 @@
 .ja-builder-main {
     display: flex;
     flex-direction: column;
-    height: 800px;
+    height: 100%;
     min-height: 500px;
     width: 100%;
     overflow: hidden;
